[package]
name = "pacl"
version = "0.1.0"
authors = ["Kenta Sato <tosainu.maple@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.home]
version = "0.5.11"

[dependencies.regex]
version = "1.12.3"
